Finished JavaScript / fully functional. Finished styling in CSS

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
   </head>
   <body>
 
-    <div>
-        <h1>3</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3>Counter</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <h1 id="number">0</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <button
+                id="plusBtn">Add Count</button>
+            </div>
+            <div class="col-xs-6">
+                <button id="minusBtn">Lower Count</button>
+            </div>
+        </div>
     </div>
     
 
